src/objects/Customer__c.object
<CustomObject>
    <description>Object to store the Customer and its generic attribute in the Customer Hub. 
The object has three record types - NXP Ultimate Parent ( Global Enterprise ), Division and Location.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Short Name of the Customer</description>
        <inlineHelpText>Short Name of the Customer</inlineHelpText>
        <label>Account Name  ( Short Name )</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer business life  cycle - Buyer ?</description>
        <inlineHelpText>Customer business life  cycle - Buyer ?</inlineHelpText>
        <label>Buyer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Id__c</fullName>
        <description>This field will store 18 digit Id of the CMD Request record so that we can connect Customer record with CMD Request.</description>
        <inlineHelpText>Please provide the Id of the CMD Request record.</inlineHelpText>
        <label>CMD Request Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMD_Request_Partner_Function__c</fullName>
        <label>CMD Request Partner Function</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <inlineHelpText>Customer address - city</inlineHelpText>
        <label>City</label>
        <length>35</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consolidated_Account_Code__c</fullName>
        <description>Consolidated Account Code text string</description>
        <inlineHelpText>Consolidated Account Code (CACC) attach to the parent account</inlineHelpText>
        <label>Consolidated Account Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Customer address - country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abkhazia</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Akrotiri And Dhekelia</fullName>
                </value>
                <value>
                    <fullName>Åland</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNB_Line_of_Business__c</fullName>
        <description>D&amp;B Line of Business</description>
        <inlineHelpText>Line of business found on DNB</inlineHelpText>
        <label>DNB Line of Business</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Trade_Style__c</fullName>
        <description>D&amp;B Trade Style</description>
        <inlineHelpText>Trade Style found on DNB</inlineHelpText>
        <label>DNB Trade Style</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Verified__c</fullName>
        <description>Verified with DNB</description>
        <inlineHelpText>Indicate if customer information is found and the degree of match in Hoovers D&amp;B database.
Comparing the following 5 parameters: legal name, street, city, zipcode, country</inlineHelpText>
        <label>DNB Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DNB Accepted</fullName>
                    <default>true</default>
                    <label>DNB Accepted</label>
                </value>
                <value>
                    <fullName>DNB Rejected: Poor Match</fullName>
                </value>
                <value>
                    <fullName>DNB Rejected: Not Found</fullName>
                </value>
                <value>
                    <fullName>DNB Accepted: Out of Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS4__c</fullName>
        <description>DUNS+4</description>
        <inlineHelpText>DUNS+4</inlineHelpText>
        <label>DUNS + 4</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>DUNS Number for the entity</description>
        <inlineHelpText>DUNS # from Hoovers D&amp;B database</inlineHelpText>
        <label>DUNS</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <description>Doing Business As capture shows this Entity does business, An entity here is typically a combination of Legal Name and Address</description>
        <inlineHelpText>Doing business as capture shows this entity does business. And entity here is typically a combination of legal name and address.</inlineHelpText>
        <label>DNB / NXP Doing Business As</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMail__c</fullName>
        <description>EMail</description>
        <inlineHelpText>The email address of the company</inlineHelpText>
        <label>E -Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_of_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Customer business life  cycle - End of Life ?</description>
        <inlineHelpText>Customer business life  cycle - End of Life ?</inlineHelpText>
        <label>End of Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>The fax number of the company</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Degree_Parent_Account_Name__c</fullName>
        <formula>IF(
    RecordType.DeveloperName = &apos;Location&apos; ,
    IF(
        OR( 
            ISNULL( Parent_Division__c ) ,
            ISBLANK( Parent_Division__c ) 
        ),
        Global_Enterprise__r.Account_Name__c ,
        Parent_Division__r.Account_Name__c
    ) ,
    IF(
        RecordType.DeveloperName = &apos;Division&apos; ,
        Global_Enterprise__r.Account_Name__c ,
        NULL
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there is Parent Division, the Immediate Parent of this Location will be that Parent Division.
Otherwise, the Immediate Parent of this Location will be NXP Ultimate Parent.</inlineHelpText>
        <label>First-Degree Parent Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Channel__c</fullName>
        <inlineHelpText>The channel type customer comes through</inlineHelpText>
        <label>Fulfillment Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Disti</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Classification_Valid_From__c</fullName>
        <defaultValue>DATE(YEAR(TODAY())+1 ,01,01)</defaultValue>
        <description>Future Classification Valid From</description>
        <inlineHelpText>Future Classification Valid From</inlineHelpText>
        <label>Future Category Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Classification__c</fullName>
        <description>Future Category</description>
        <inlineHelpText>T1:Rev in 100s M$/ $100Ms growth over 3 yrs 
T2:Rev in 20-100M$/$50Ms growth over 3 yrs 
T3:Rev 3-20M$/$5M growth over 3 yrs
T4 TMMA:supported by both NXP FSE &amp; Disti
T4 RoM:supported by Disti, lead by NXP manager
T4 Longtail:catalog/web user/startup</inlineHelpText>
        <label>Future Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - TMMA</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - ROM</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - Long Tail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Global_Enterprise_Valid_From__c</fullName>
        <defaultValue>DATE(YEAR(TODAY())+1 ,01,01)</defaultValue>
        <description>Future NXP Ultimate Parent (Global Enterprise ) From</description>
        <inlineHelpText>Future NXP Ultimate Parent (Global Enterprise ) From</inlineHelpText>
        <label>Future NXP Ultimate Parent From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Global_Enterprise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Future NXP Ultimate Parent ( Global Enterprise )</description>
        <inlineHelpText>Future NXP Ultimate Parent ( Global Enterprise )</inlineHelpText>
        <label>Future NXP Ultimate Parent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a Record Type = NXP Ultimate Parent ( Global Enterprise ) can be associated with this field.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Global_Enterprise</value>
            </filterItems>
            <infoMessage>Only a Record Type = NXP Ultimate Parent ( Global Enterprise ) can be associated with this field.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers (Future NXP Ultimate Parent )</relationshipLabel>
        <relationshipName>FutureNXPUltimateParent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Future_Industry_Segment_Valid_From__c</fullName>
        <defaultValue>DATE(YEAR(TODAY())+1 ,01,01)</defaultValue>
        <description>Future Industry Segments and Sug Segmetns  Valid From</description>
        <inlineHelpText>Future Industry Segments and Sug Segmetns  Valid From</inlineHelpText>
        <label>Future Industry Segments Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Industry_Segment__c</fullName>
        <description>Future Industry Segment</description>
        <inlineHelpText>Future Industry Segment</inlineHelpText>
        <label>Future Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Appliances</fullName>
                </value>
                <value>
                    <fullName>BB - Energy Management</fullName>
                </value>
                <value>
                    <fullName>CC - Home/Building Automation (HABA)</fullName>
                </value>
                <value>
                    <fullName>DD - Automotive &amp; Transportation</fullName>
                </value>
                <value>
                    <fullName>EE - Consumer</fullName>
                </value>
                <value>
                    <fullName>FF - Computing</fullName>
                </value>
                <value>
                    <fullName>GG - Secure Transactions</fullName>
                </value>
                <value>
                    <fullName>HH - Secure Identity</fullName>
                </value>
                <value>
                    <fullName>II - Tagging &amp; Authentication</fullName>
                </value>
                <value>
                    <fullName>JJ - Wireless Infrastructure and RF</fullName>
                </value>
                <value>
                    <fullName>KK - Mobile</fullName>
                </value>
                <value>
                    <fullName>LL - EMS</fullName>
                </value>
                <value>
                    <fullName>MM - Distribution</fullName>
                </value>
                <value>
                    <fullName>NN - Healthcare</fullName>
                </value>
                <value>
                    <fullName>OO - Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Industry_Sub_Segment__c</fullName>
        <description>Future Industry Sub Segment</description>
        <inlineHelpText>Future Industry Sub Segment</inlineHelpText>
        <label>Future Industry Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Future_Industry_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A1 - Major Home Appliances</fullName>
                </value>
                <value>
                    <fullName>A2 - Small Domestic Appliances (selective)</fullName>
                </value>
                <value>
                    <fullName>A3 - Consumer Power Tool</fullName>
                </value>
                <value>
                    <fullName>B1 - Smart Energy/Grid</fullName>
                </value>
                <value>
                    <fullName>B2 - Power Supply</fullName>
                </value>
                <value>
                    <fullName>C1 - Building Automation</fullName>
                </value>
                <value>
                    <fullName>C2 - Home Automation</fullName>
                </value>
                <value>
                    <fullName>C3 - Lighting (including Solid state lighting, etc.)</fullName>
                </value>
                <value>
                    <fullName>C4 - Smart Lighting</fullName>
                </value>
                <value>
                    <fullName>D1 - Body, Safety and Comfort</fullName>
                </value>
                <value>
                    <fullName>D2 - Car Infotainment</fullName>
                </value>
                <value>
                    <fullName>D3 - Chassis</fullName>
                </value>
                <value>
                    <fullName>D4 - Intelligent transportation systems (ITS)</fullName>
                </value>
                <value>
                    <fullName>D5 - Powertrain</fullName>
                </value>
                <value>
                    <fullName>D6 - Telematics</fullName>
                </value>
                <value>
                    <fullName>D7 - Transportation</fullName>
                </value>
                <value>
                    <fullName>E1 - TV</fullName>
                </value>
                <value>
                    <fullName>E2 - Set Top Box</fullName>
                </value>
                <value>
                    <fullName>E3 - Gaming (Home Gaming Console)</fullName>
                </value>
                <value>
                    <fullName>E4 - Home Audio</fullName>
                </value>
                <value>
                    <fullName>E5 - Portable</fullName>
                </value>
                <value>
                    <fullName>E6 - Others (DVD/BR, Music Instruments, Specialty TV)</fullName>
                </value>
                <value>
                    <fullName>F1 - Desktop</fullName>
                </value>
                <value>
                    <fullName>F2 - Notebook</fullName>
                </value>
                <value>
                    <fullName>F3 - Netbook</fullName>
                </value>
                <value>
                    <fullName>F4 - Ultrabook</fullName>
                </value>
                <value>
                    <fullName>F5 - Server</fullName>
                </value>
                <value>
                    <fullName>F6 - Storage</fullName>
                </value>
                <value>
                    <fullName>F7 - Monitor</fullName>
                </value>
                <value>
                    <fullName>F8 - Printer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Future_Parent_Division_Valid_From__c</fullName>
        <defaultValue>DATE(YEAR(TODAY())+1 ,01,01)</defaultValue>
        <description>Future Parent Division Valid From</description>
        <inlineHelpText>Future Parent Division Valid From</inlineHelpText>
        <label>Future Parent Division Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Parent_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Future Parent Division</description>
        <inlineHelpText>Future Parent Division</inlineHelpText>
        <label>Future Parent Division</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Division</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers (Future Parent Division)</relationshipLabel>
        <relationshipName>FutureParentDivision</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSM_Classification__c</fullName>
        <description>GSM Customer Category</description>
        <inlineHelpText>T1:Rev in 100s M$/ $100Ms growth over 3 yrs 
T2:Rev in 20-100M$/$50Ms growth over 3 yrs 
T3:Rev 3-20M$/$5M growth over 3 yrs
T4 TMMA:supported by both NXP FSE &amp; Disti
T4 RoM:supported by Disti, lead by NXP manager
T4 Longtail:catalog/web user/startup</inlineHelpText>
        <label>Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - Long Tail</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - ROM</fullName>
                </value>
                <value>
                    <fullName>Tier 4 - TMMA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSM_Classification_of_Ultimate_Parent__c</fullName>
        <formula>TEXT( Global_Enterprise__r.GSM_Classification__c )</formula>
        <label>Customer Category of Ultimate Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Enterprise__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the NXP Ultimate Parent (Global Enterprise) of the entity.</description>
        <inlineHelpText>Look up to the NXP Ultimate Parent (Global Enterprise) of the entity.</inlineHelpText>
        <label>NXP Ultimate Parent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a Record Type = NXP Ultimate Parent ( Global Enterprise ) can be associated with this field.</errorMessage>
            <filterItems>
                <field>Customer__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Global_Enterprise</value>
            </filterItems>
            <filterItems>
                <field>Customer__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Division, Location</value>
            </filterItems>
            <infoMessage>Only a Record Type = NXP Ultimate Parent ( Global Enterprise ) can be associated with this field.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Customers ( NXP Ultimate Parent)</relationshipLabel>
        <relationshipName>NXPUltimateParent_MyLowerLevels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>House_Number__c</fullName>
        <description>House number</description>
        <inlineHelpText>Part of customer address</inlineHelpText>
        <label>House Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Segment__c</fullName>
        <description>Industry Segment</description>
        <inlineHelpText>Customer Buying Group (CBG)</inlineHelpText>
        <label>Industry Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Automotive</fullName>
                </value>
                <value>
                    <fullName>BB - C&amp;I</fullName>
                </value>
                <value>
                    <fullName>CC - Computing</fullName>
                </value>
                <value>
                    <fullName>DD - Distribution</fullName>
                </value>
                <value>
                    <fullName>EE - EMS</fullName>
                </value>
                <value>
                    <fullName>FF - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>GG - Mobile</fullName>
                </value>
                <value>
                    <fullName>HH - Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Sub_Segment__c</fullName>
        <description>Industry Sub Segment</description>
        <inlineHelpText>Sub CBG</inlineHelpText>
        <label>Industry Sub Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>A1 - Automotive</fullName>
                </value>
                <value>
                    <fullName>B1 - Consumer &amp; HA</fullName>
                </value>
                <value>
                    <fullName>B2 - Gaming</fullName>
                </value>
                <value>
                    <fullName>B3 - Imaging</fullName>
                </value>
                <value>
                    <fullName>B4 - Industrial</fullName>
                </value>
                <value>
                    <fullName>B5 - Lighting</fullName>
                </value>
                <value>
                    <fullName>B6 - Power Supply</fullName>
                </value>
                <value>
                    <fullName>B7 - White Goods</fullName>
                </value>
                <value>
                    <fullName>B8 - Healthcare</fullName>
                </value>
                <value>
                    <fullName>B9 - Smart Home&amp;Building</fullName>
                </value>
                <value>
                    <fullName>C1 - Computing</fullName>
                </value>
                <value>
                    <fullName>C2 - Computing - Power Supply</fullName>
                </value>
                <value>
                    <fullName>C3 - Data Center</fullName>
                </value>
                <value>
                    <fullName>D1 - Distribution</fullName>
                </value>
                <value>
                    <fullName>E1 - EMS</fullName>
                </value>
                <value>
                    <fullName>F1 - Infrastructure</fullName>
                </value>
                <value>
                    <fullName>F2 - Network</fullName>
                </value>
                <value>
                    <fullName>G1 - Mobile</fullName>
                </value>
                <value>
                    <fullName>G2 - Wearables</fullName>
                </value>
                <value>
                    <fullName>H1 - Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Updated_IT_systems_for_Buyer__c</fullName>
        <description>Last Updated IT systems for &quot;Buyer&quot;</description>
        <inlineHelpText>Last Updated IT systems for &quot;Buyer&quot;</inlineHelpText>
        <label>Last Updated IT systems for &quot;Buyer&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_IT_systems_for_End_of_Life__c</fullName>
        <description>Last Updated IT systems for End of Life&quot;</description>
        <inlineHelpText>Last Updated IT systems for End of Life&quot;</inlineHelpText>
        <label>Last Updated IT systems for &quot; EndofLife&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_IT_systems_for_Lead__c</fullName>
        <description>Last Updated IT systems for  &quot;Lead&quot;</description>
        <inlineHelpText>Last Updated IT systems for  &quot;Lead&quot;</inlineHelpText>
        <label>Last Updated IT systems for  &quot;Lead&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_IT_systems_for_Quality__c</fullName>
        <description>Last Updated IT systems for &quot;Quality&quot;</description>
        <inlineHelpText>Last Updated IT systems for &quot;Quality&quot;</inlineHelpText>
        <label>Last Updated IT systems for &quot;Quality&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_IT_systems_for_Sales__c</fullName>
        <description>Last Updated IT systems for &quot;Sales&quot;</description>
        <inlineHelpText>Last Updated IT systems for &quot;Sales&quot;</inlineHelpText>
        <label>Last Updated IT systems for &quot;Sales&quot;</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Life cycle - Lead ?</description>
        <inlineHelpText>Life cycle - Lead ?</inlineHelpText>
        <label>Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>The database row Id of the legacy system from merger</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <description>Legal Name of the Customer</description>
        <inlineHelpText>Legal Name of the Customer</inlineHelpText>
        <label>Legal Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <description>NAICSCode</description>
        <inlineHelpText>NAICS code from DUNS (The North America Industry Classification System (NAICS) is used by business and governments to classify and measure economic activity in the United States, Canada and Mexico)</inlineHelpText>
        <label>NAICS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00 - No found</fullName>
                </value>
                <value>
                    <fullName>11 - Agriculture, Forestry, Fishing and Hunting</fullName>
                </value>
                <value>
                    <fullName>21 - Mining, Quarrying, and Oil and Gas Extraction</fullName>
                </value>
                <value>
                    <fullName>22 - Utilities</fullName>
                </value>
                <value>
                    <fullName>23 - Construction</fullName>
                </value>
                <value>
                    <fullName>31 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>32 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>33 - Manufacturing</fullName>
                </value>
                <value>
                    <fullName>42 - Wholesale Trade</fullName>
                </value>
                <value>
                    <fullName>44 - Retail Trade</fullName>
                </value>
                <value>
                    <fullName>45 - Retail Trade</fullName>
                </value>
                <value>
                    <fullName>48 - Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>49 - Transportation and Warehousing</fullName>
                </value>
                <value>
                    <fullName>51 - Information</fullName>
                </value>
                <value>
                    <fullName>52 - Finance and Insurance</fullName>
                </value>
                <value>
                    <fullName>53 - Real Estate and Rental and Leasing</fullName>
                </value>
                <value>
                    <fullName>54 - Professional, Scientific, and Technical Services</fullName>
                </value>
                <value>
                    <fullName>55 - Management of Companies and Enterprises</fullName>
                </value>
                <value>
                    <fullName>56 - Administrative,  Support , Waste Management , Remediation Services</fullName>
                </value>
                <value>
                    <fullName>61 - Educational Services</fullName>
                </value>
                <value>
                    <fullName>62 - Health Care and Social Assistance</fullName>
                </value>
                <value>
                    <fullName>71 - Arts, Entertainment, and Recreation</fullName>
                </value>
                <value>
                    <fullName>72 - Accommodation and Food Services</fullName>
                </value>
                <value>
                    <fullName>81 - Other Services (except Public Administration)</fullName>
                </value>
                <value>
                    <fullName>92 - Public Administration</fullName>
                </value>
                <value>
                    <fullName>99 - Unclassified Establishments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>